grammar.js
/**
 * @file A tree-sitter grammar for the Red programming language
 * @author qtxie <xqtxyz@gmail.com>
 * @license Apache-2.0
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: "red",

  extras: (_) => [/[ \t]/],
  externals: ($) => [
    $.infix_op,
    $.hexa,
    $.raw_string,
    $._multiline_string,
    $.ipv6_address,
    $.error_sentinel,
  ],
  word: ($) => $._word,

  inline: ($) => [
    $._expression,
    $._complex_expression,
    $._literal,
    $._any_string,
    $._any_path,
    $._any_word,
    $._func_spec,
    $._set_word,
    $._path,
    $._string_seq,
    $._binary_base_16,
    $._binary_base_2,
    $._binary_base_64,
  ],

  rules: {

    /* General rules */
    source_file: ($) => repeat($._expression),

    /* Comments */
    comment: (_) => token(seq(";", /.*/)),

  	_newline: (_) => /\r?\n/,

    /* expressions */
    _expression: ($) => choice($._complex_expression, $._literal, $._newline),

    _literal: ($) =>
      choice(
        $._any_string,
        $._any_word,
        prec(3, $._any_path),
        $.ipv6,
        $.hexa,
        $.construction,
        $.boolean,
        $.number,
        $.pair,
        $.tuple,
        $.char,
        $.file,
        $.issue,
        $.binary,
        $.map,
        $.refinement,
        $.tag,
        $.ref,
        $.url,
        $.email,
        $.point,
        $.money,
        $.time,
        $.date,
        $.paren,
        $.block,
        $.infix_op,
        $.comment,
        $.invalid_token,
      ),

    boolean: (_) =>
      choice(
        iword("true"),
        iword("false"),
        iword("yes"),
        iword("no"),
        iword("on"),
        iword("off"),
      ),

    number: (_) => {
      const separator = "'";
      const decimal = /[0-9]/;
      const decimalDigits = seq(
        repeat1(decimal),
        repeat(seq(separator, repeat1(decimal))),
      );
      const sign = choice("-", "+");
      return token(
        choice(
          seq(
            optional(sign),
            decimalDigits,
            optional(seq(".", decimalDigits)),
            optional(seq(/[eE]/, seq(optional(sign), repeat1(decimal)))),
            optional(token.immediate("%")),
          ),
          seq(
            optional(sign),
            choice(/1.#inf/i, /1.#nan/i),
            optional(token.immediate("%")),
          ),
          seq(".", token.immediate(repeat1(decimal))),
        ),
      );
    },

    pair: (_) => {
      const separator = "'";
      const decimal = /[0-9]/;
      const integer = seq(
        optional(/[-\+]/),
        repeat1(decimal),
        repeat(seq(separator, repeat1(decimal))),
      );
      return token(seq(integer, /[xX]/, integer));
    },

    point: ($) =>
      prec(
        1,
        seq("(", $.number, ",", $.number, optional(seq(",", $.number)), ")"),
      ),

    money: (_) =>
      token(
        seq(
          optional(/[-\+]/),
          optional(/[A-Za-z]{3}/),
          "$",
          repeat1(/\d/),
          repeat(seq("'", repeat1(/\d/))),
          optional(seq(".", repeat1(/\d/))),
        ),
      ),

    tuple: (_) => {
      const byte = choice(
        seq("25", /[0-5]/),
        seq("2", /[0-4]/, /\d/),
        seq("1", /\d{2}/),
        seq(optional("0"), /[1-9]/, /\d/),
        seq(optional("0"), optional("0"), /\d/),
        "0",
      );
      const dot_byte = seq(".", byte);
      return token(
        seq(
          byte,
          dot_byte,
          dot_byte,
          optional(dot_byte),
          optional(dot_byte),
          optional(dot_byte),
          optional(dot_byte),
          optional(dot_byte),
          optional(dot_byte),
          optional(dot_byte),
          optional(dot_byte),
          optional(dot_byte),
        ),
      );
    },

    ipv6: ($) => seq($.ipv6_address, optional($.zone_index), optional($.cidr)),
    zone_index: (_) => token.immediate(prec(1, /%[A-Za-z0-9_.-]+/)),
    cidr: (_) => token.immediate(/\/[0-9]{1,3}/),

    time: (_) => {
      const decimal_number = token(seq(".", /\d{1,9}/));
      return prec(
        1,
        token(
          seq(
            /[\+\-]?\d+:\d+/,
            optional(
              token.immediate(
                choice(decimal_number, seq(/:\d+/, optional(decimal_number))),
              ),
            ),
          ),
        ),
      );
    },

    date: (_) => {
      // Basic components
      const year = /\d{3,4}/;
      const month_num = /\d{1,2}/;
      const day = /\d{1,2}/;
      const decimal_number = token(seq(".", /\d{1,9}/));

      const month_name = token(
        choice(
          /Jan(uary)?/i,
          /Feb(ruary)?/i,
          /Mar(ch)?/i,
          /Apr(il)?/i,
          /May/i,
          /Jun(e)?/i,
          /Jul(y)?/i,
          /Aug(ust)?/i,
          /Sep(t(ember)?)?/i,
          /Oct(ober)?/i,
          /Nov(ember)?/i,
          /Dec(ember)?/i,
        ),
      );
      const month = choice(month_num, month_name);

      const timezone = seq(
        token(
          choice(
            "Z",
            seq(
              choice("+", "-"),
              choice(/\d{4}/, seq(/\d{1,2}/, optional(/:\d{2}/))),
            ),
          ),
        ),
      );

      const _time = prec(
        1,
        token(
          seq(
            /[T\/]\d+:\d+/,
            optional(
              choice(decimal_number, seq(/:\d+/, optional(decimal_number))),
            ),
          ),
        ),
      );
      const time_z = prec(2, seq(_time, optional(timezone)));

      // date
      const ymd_dash = token(seq(year, "-", month, "-", day));
      const ymd_slash = token(seq(year, "/", month, "/", day));
      const dmy_dash = token(seq(day, "-", month, "-", choice(year, day)));
      const dmy_slash = token(
        seq(day, "/", month, "/", choice(token(seq(optional("-"), year)), day)),
      );
      const yyyymmdd = token(
        seq(
          /\d{8}T/,
          choice(
            seq(/\d{6}/, optional(decimal_number), optional(timezone)),
            /\d{4}Z/,
          ),
        ),
      );
      const yyyywww = token(
        seq(
          year,
          "-",
          choice(seq("W", /\d{2}/, optional(seq("-", /[1-9]/))), /\d{3}/),
        ),
      );

      return choice(
        prec(
          2,
          token(
            seq(
              choice(ymd_dash, ymd_slash, dmy_dash, dmy_slash, yyyywww),
              optional(time_z),
            ),
          ),
        ),
        yyyymmdd,
      );
    },

    char: ($) =>
      seq(
        "#",
        token.immediate('"'),
        choice($.escaped_char, token.immediate(/[^"\^]/)),
        '"',
      ),

    ref: (_) => /@[^\s\[\]\(\)\{\}@#$;,'"=<>^]*/,
    issue: (_) => /#[^\s\[\]\(\)\{\}@;"<>:]+/,
    refinement: (_) =>
      seq("/", token.immediate(/[^\s\/\\,\[\]\(\)\{\}"#%\$@:;<>]+/)),
    email: (_) => {
      const char = /[^\s\[\]\(\)\{\}@;:<"]/;
      return token(seq(repeat1(char), token.immediate("@"), repeat(char)));
    },

    file: ($) =>
      prec(
        1,
        choice(
          '%""',
          seq("%", token.immediate('"'), $._string_seq, '"'),
          /%[^\s\[\]\(\)\{\}@:;"\n]+/,
        ),
      ),

    _string_seq: ($) =>
      repeat1(
        choice(
          alias(token.immediate(prec(1, /[^\^"\n]+/)), $.string_content),
          $.escaped_char,
        ),
      ),

    string: ($) => choice('""', seq('"', $._string_seq, '"')),

    multiline_string: ($) => seq("{", $._multiline_string, "}"),

    escaped_char: (_) =>
      token(
        prec(
          1,
          seq(
            "^",
            choice(
              /[^\(\n]/,
              "(null)",
              "(back)",
              "(tab)",
              "(line)",
              "(page)",
              "(esc)",
              "(del)",
              "()",
              /\([0-9a-fA-F]{1,6}\)/,
            ),
          ),
        ),
      ),

    construction: (_) =>
      seq("#", token.immediate("("), /[A-Za-z\-!]{3,20}/, ")"),

    _word: (_) =>
      /[^\s\d'\/\\,\[\]\(\)\{\}"#%\$@:;][^\s\/\\,\[\]\(\)\{\}"#%\$@:;]*/,

    _set_word: ($) => seq($._word, token.immediate(":")),

    word: ($) => choice($._word, "/", /\/+/, "%"),
    lit_word: ($) => seq("'", $.word),
    get_word: ($) => seq(":", $.word),

    set_word: ($) => prec(1, choice($._set_word, /\/+:/)),

    url: ($) =>
      seq(
        $._set_word,
        choice(
          token.immediate(/[^\s\\\[\]\(\)\{\}";]+/),
          seq(
            token.immediate("//["),
            $.ipv6_address,
            token.immediate(/\][^\s\\\[\]\(\)\{\}";]*/),
          ),
        ),
      ),

    _any_word: ($) => choice($.lit_word, $.get_word, $.set_word, $.word),
    _any_path: ($) => choice($.lit_path, $.get_path, $.set_path, $.path),
    _any_string: ($) => choice($.string, $.multiline_string, $.raw_string),

    _path_element: ($) =>
      choice(
        $.boolean,
        $.number,
        $.pair,
        $.tuple,
        $.char,
        $.file,
        $.string,
        $.issue,
        $.binary,
        $.map,
        $.word,
        $.lit_word,
        $.get_word,
        $.tag,
        $.ref,
        $.paren,
      ),
    _path: ($) => prec(3, seq($._path_element, token.immediate(prec(2, "/")))),
    path_start: ($) => prec(4, seq($._word, token.immediate(prec(2, "/")))),
    path: ($) => prec(2, seq($.path_start, repeat($._path), $._path_element)),
    lit_path: ($) => prec(2, seq("'", $.path)),
    get_path: ($) => prec(2, seq(":", $.path)),
    set_path: ($) => prec(3, seq($.path, token.immediate(":"))),

    _binary_base_2: ($) =>
      seq(
        "2#",
        token.immediate("{"),
        repeat(choice(/(?:[01]\s*){8}/, $.comment, $._newline)),
        "}",
      ),
    _binary_base_16: ($) =>
      seq(
        choice("#", "16#"),
        token.immediate("{"),
        repeat(choice(/[0-9a-fA-F]{2}/, $.comment, $._newline)),
        "}",
      ),
    _binary_base_64: ($) =>
      seq(
        "64#",
        token.immediate("{"),
        repeat(choice(/[A-Za-z0-9\+\/]/, $.comment, $._newline)),
        optional(seq(
          "=",
          optional("="),
          // if you want newlines after padding, handle them here
          repeat($._newline)
        )),
        "}",
      ),
    binary: ($) =>
      choice($._binary_base_2, $._binary_base_16, $._binary_base_64),

    map: ($) => seq("#", token.immediate("["), repeat(choice($._literal, $._newline)), "]"),
    tag: (_) =>
      token(
        prec(
          2,
          seq(
            /<[^\s\[\]\(\)\{\};"<>=]/,
            repeat(choice(/"[^"]*"/, /'[^']*'/, /[^>"']/)),
            ">",
          ),
        ),
      ),

    _complex_expression: ($) => choice($.function, $.does, $.context, $.make),

    block: ($) => seq("[", repeat($._expression), "]"),
    paren: ($) => seq("(", repeat($._expression), ")"),

    _func_spec: ($) => choice($.get_word, $.word, $.get_path, $.path, $.block),
    function: ($) =>
      prec.right(
        2,
        seq(
          field("name", choice($.set_word, $.set_path)),
          field(
            "key",
            choice(
              "func",
              "function",
              "has",
              "routine",
              "Func",
              "FUNC",
              "Function",
              "FUNCTION",
              "ROUTINE",
              "Routine",
              "Has",
              "HAS",
            ),
          ),
          optional(seq(field("spec", $._func_spec), optional(field("body", $.block)))),
        ),
      ),

    does: ($) =>
      prec.right(
        2,
        seq(
          field("name", choice($.set_word, $.set_path)),
          field("key", choice("does", "Does", "DOES")),
          optional(field("body", $.block)),
        ),
      ),

    context: ($) =>
      prec.right(
        2,
        seq(
          field("name", choice($.set_word, $.set_path)),
          field(
            "key",
            choice(
              "context",
              "object",
              "Context",
              "CONTEXT",
              "Object",
              "OBJECT",
            ),
          ),
          optional(field("body", $.block)),
        ),
      ),

      make: ($) =>
        prec.right(
          2,
          seq(
            field("name", choice($.set_word, $.set_path)),
            field(
              "key",
              choice(
                "make",
                "Make",
                "MAKE",
              ),
            ),
          ),
      ),

    invalid_token: ($) =>
      prec(
        -1,
        seq(
          choice($.number, $.tuple, $.date, $.time, $.pair, $.money),
          token.immediate(/[^\s\[\]\(\)\{;:",xX<\/]+/),
        ),
      ),
  },
});

// Helper function to create a case-insensitive regex for a word
function caseInsensitive(word) {
  return word
    .split("") // Split the word into an array of characters
    .map((letter) => `[${letter}${letter.toUpperCase()}]`) // Create a character set for each letter, e.g., '[aA]'
    .join(""); // Join them back into a single regex string
}

function iword(word) {
  // Use 'token(prec(1, ...))' to give the keyword precedence over identifiers
  return token(prec(1, new RegExp(caseInsensitive(word))));
}
